# testCODEX

./: .env.example  .gitignore  AGENTS.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
app/api/: main.py
app/backtest/: analysis.py  diagnostics.py  engine.py  metrics.py
app/config/: settings.py
app/core/: service.py
app/data/: dataset_manager.py  live_feed.py  loader.py  transforms.py  validation.py
app/exchange/: base.py  ccxt_adapter.py  simulated.py
app/execution/: engine.py  live_interface.py
app/models/: market.py  trading.py
app/paper/: broker.py  job.py
app/portfolio/: state.py
app/reports/: __init__.py  exporter.py
app/risk/: manager.py
app/storage/: __init__.py  repository.py
app/strategies/: base.py  breakout.py  ema_crossover.py  mean_reversion.py  regime_filter.py  registry.py  volatility_breakout.py
app/utils/: indicators.py  logging.py  regime.py
data/: sample_ohlcv.csv
docs/: architecture_ru.md  backtesting_ru.md  installation_ru.md  live_trading_warning_ru.md  paper_trading_ru.md  risk_management_ru.md  strategy_guide_ru.md  troubleshooting_ru.md  user_guide_ru.md
scripts/: run_backtest.py  run_paper.py
tests/integration/: test_api_surface.py  test_backtest_reproducibility.py  test_exchange_adapter.py  test_gui_smoke.py  test_research_workflows.py
tests/unit/: test_backtest_analysis.py  test_backtest_engine.py  test_config_validation.py  test_data_transforms.py  test_dataset_manager.py  test_diagnostics.py  test_execution_engine.py  test_indicators.py  test_paper_broker.py  test_portfolio_state.py  test_regime.py  (+4 more)
ui/: streamlit_app.py
(+3 files in other folders)
