[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "reliable-crypto-bot"
version = "0.1.0"
description = "Production-minded crypto trading bot with paper trading, backtesting, and API observability"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "ccxt>=4.4.0",
  "fastapi>=0.115.0",
  "uvicorn>=0.32.0",
  "pydantic>=2.10.0",
  "pydantic-settings>=2.6.0",
  "structlog>=24.4.0"
]

[project.optional-dependencies]
test = [
  "pytest>=8.3.0"
]
dev = [
  "pytest>=8.3.0"
]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-q"
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["app*"]
